--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,7 +32,7 @@ en:
             error: There was a problem creating this process.
             success: Process successfully created.
           destroy:
-            error: There was a deleting this process.
+            error: There was a problem deleting this process.
             success: Process successfully deleted.
           edit:
             title: Edit process
