Add labels to listing when the voting components has been completed

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -63,6 +63,8 @@ en:
         component:
           more_info: More info
           vote: Vote
+          status:
+            voted: Voting completed
         index:
           active_processes: Active now
         process:
