--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -65,6 +65,10 @@ en:
           vote: Vote
           status:
             voted: Voting completed
+        confirm_account:
+          title: Confirm your email address
+          description: You should have received a confirmation link to your email. Please click that link in order to proceed.
+          already_confirmed: I have already confirmed my email
         index:
           active_processes: Active now
         process:
